More refactoring, add prism.js support, optional includes
Extensions such as prism.js are not always used. Make the inclusion of
such resources more controllable by defining "optional" includes that
can be added on a per-page basis.

For Markdown pages, code blocks automatically trigger highlighting
support via prism.js. Its CSS/JavaScript resources are only included
when they're necessary.

For Liquid pages, support for stringhold-liqp's
conditional/conditionally is added.

JSP pages need to declare which extensions are supported prior to
rendering any HTML HEAD/BODY tag.